db init, add create route, some fix

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.16.0",
+    "express": "^4.14.0",
     "mongo-db": "^1.0.2",
-    "mongodb": "^2.2.19"
+    "mongodb": "^2.2.19",
+    "mongoose": "^4.7.7"
   }
 }
